<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        app:layout_behavior="@string/behavior_main_header">

        <com.othershe.behaviortest.helper.NestedLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/header_content"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="220dp"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:padding="12dp"
                android:text="Hello World"
                android:textColor="@android:color/white" />

        </com.othershe.behaviortest.helper.NestedLinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/colorPrimary"
        app:layout_behavior="@string/behavior_main_title">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:padding="3dp"
            android:src="@mipmap/ic_launcher" />

    </LinearLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:background="#ffffff"
        app:layout_behavior="@string/behavior_main_tab"
        app:tabIndicatorColor="@color/colorPrimary"
        app:tabSelectedTextColor="@color/colorPrimary"
        app:tabTextColor="#000000" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        app:layout_behavior="@string/behavior_main_content">

    </android.support.v4.view.ViewPager>

</android.support.design.widget.CoordinatorLayout>
